# MnemNet

./: .gitignore  README.md  pyproject.toml
core/: kai_collector.py  kai_memory.py
docs/: collector.md  getting-started.md
mnemnet/: __init__.py  __main__.py  collector.py  config.py  memory.py  visualize.py
schemas/: kairos.toml
tests/: test_collector.py  test_config.py  test_memory.py  test_visualize.py
