[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemnet"
version = "0.1.0"
description = "Living memory layer for AI agents — temporal decay, contradiction tension, and predictive layer on top of mempalace"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "memory", "knowledge-graph", "agent", "mempalace"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "mempalace>=3.0.0",
  "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mnemnet-graph     = "mnemnet.visualize:main"
mnemnet-collect   = "mnemnet.collector:main"

[project.urls]
Homepage   = "https://github.com/lininkgg/MnemNet"
Repository = "https://github.com/lininkgg/MnemNet"

[tool.hatch.build.targets.wheel]
packages = ["mnemnet"]

[tool.ruff]
line-length = 100
